--- a/style.css
+++ b/style.css
@@ -137,15 +137,15 @@ span {
     display: flex;
     width: 100%;
     padding: 2% 5% 0 5%;
-    gap: 15px;
+    gap: 2%;
 }
 
 .com {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 20%;
-    height: 20vh;
+    width: 15%;
+    height: 17vh;
     background-color: #292B37;
     position: relative;
     overflow: hidden;
@@ -173,4 +173,144 @@ span {
 
 .com:hover::before {
     border-color: #fff;
+}
+
+
+.korea--contents {
+    display: flex;
+    flex-direction: column;
+    padding: 2% 2%;
+    width: 100%;
+    gap: 15px;
+}
+
+.title {
+    font-size: larger;
+    padding-left: 3%;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.img {
+    display: flex;
+    gap: 2%;
+    justify-content: center;
+    padding: 0 5%;
+}
+
+.contents--img {
+    position: relative;
+}
+
+.contents--img1 {
+    position: relative;
+}
+
+.contents--img2 {
+    position: relative;
+}
+
+.slide {
+    display: none;
+    width: 19%;
+    border-radius: 4px;
+}
+
+.slide1 {
+    display: none;
+    width: 19%;
+    border-radius: 4px;
+}
+
+.slide2 {
+    display: none;
+    width: 19%;
+    border-radius: 4px;
+}
+
+.slide:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.slide:hover {
+    border: 3px solid white;
+    border-radius: 4px;
+}
+
+.slide1:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.slide1:hover {
+    border: 3px solid white;
+    border-radius: 4px;
+}
+
+.slide2:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.slide2:hover {
+    border: 3px solid white;
+    border-radius: 4px;
+}
+
+.pr-button,
+.ne-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 2;
+}
+
+.pr-button {
+    left: 10px;
+}
+
+.ne-button {
+    right: 10px;
+}
+
+.pr-button1,
+.ne-button1 {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 2;
+}
+
+.pr-button1 {
+    left: 10px;
+}
+
+.ne-button1 {
+    right: 10px;
+}
+
+.pr-button2,
+.ne-button2 {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 2;
+}
+
+.pr-button2 {
+    left: 10px;
+}
+
+.ne-button2 {
+    right: 10px;
 }
